# libwebsocket-test-client-android

app/: build.gradle
app/outputs/cmake/cmake/debug/arm64-v8a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_build_command.txt  cmake_install.cmake  cmake_server_log.txt  compile_commands.json  rules.ninja
app/outputs/cmake/cmake/debug/armeabi-v7a/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  cmake_server_log.txt  compile_commands.json  rules.ninja
app/outputs/cmake/cmake/debug/x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_build_command.txt  cmake_install.cmake  cmake_server_log.txt  compile_commands.json  rules.ninja
app/outputs/cmake/cmake/debug/x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  cmake_install.cmake  (+4 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
app/src/main/cpp/include/: ObserverChain.c  ObserverChain.h
app/src/main/cpp/lib/libwebsockets/: CMakeLists.txt  README.md
app/src/main/cpp/lib/libwebsockets/READMEs/: README.test-apps.md
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+78 files in other folders)
